--- a/bill.css
+++ b/bill.css
@@ -146,6 +146,16 @@ body{
     font-family: "Poppins", serif;
 }
 
+.select{
+    background-color:white;
+    border: 1px solid #969198;
+    outline: none;
+    color:#388AFB;
+    cursor: pointer;
+    border-radius: 5px;
+    padding:10px;
+    font-weight: bold;
+}
 .sec{
     width: 50%;
     height: fit-content;
@@ -185,7 +195,7 @@ body{
     width: 100%;
 }
 
-.sec .hide{
+#task-list{
     display: none;
 }
 
@@ -246,7 +256,10 @@ body{
     color:#020102;
     cursor: pointer;
     font-size: 10px;
+}
 
+#show{
+    font-size: 12px;
 }
 
 
